// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorkersTab should render 1`] = `
<div>
  <div>
    <div
      class="makeStyles-filterActionsContainer-719 makeStyles-filterActionsContainerPadding-721"
    >
      <div
        class="MuiBox-root MuiBox-root-748 makeStyles-filterStatusContainer-722 makeStyles-autocompleteFilterPosition-747"
      >
        <div
          class="makeStyles-floatingFilterWrapper-728 makeStyles-filterWrapper-727 makeStyles-buttonContainer-750 floatingFilterWrapper"
        >
          <span
            class="makeStyles-floatingFilterButton-729"
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              aria-controls="false"
              aria-haspopup="true"
              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-737"
              data-testid="button-filter-open"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                All Clients
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    class="makeStyles-dropdownIcon-731"
                  >
                    expand.svg
                  </svg>
                </span>
              </span>
            </button>
          </span>
        </div>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-createButton-683 makeStyles-primaryButtonLarge-685 MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge MuiButton-fullWidth"
        data-testid="open-worker-modal-btn"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Assign Worker
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
    <table
      aria-label="project-workers-list"
      class="MuiTable-root"
    >
      <thead
        class="MuiTableHead-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Name
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Trades
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Status in Project
          </th>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root WithStyles(ForwardRef(TableRow))-root-858 makeStyles-pointer-769"
          data-testid="worker-list-row"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              class="makeStyles-userCenter-778"
            >
              <span
                class="MuiBadge-root makeStyles-avatarPosition-790 makeStyles-avatarWithSmallBadge-844"
              >
                <div
                  class="MuiAvatar-root MuiAvatar-circle makeStyles-avatarWrapper-842 makeStyles-avatarMedium-845 MuiAvatar-colorDefault"
                >
                  <svg
                    class="MuiSvgIcon-root"
                    focusable="false"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                    />
                    <title>
                      Active
                    </title>
                  </svg>
                </div>
                <span
                  class="MuiBadge-badge MuiBadge-anchorOriginBottomRightCircle"
                >
                  <svg>
                    accepted.svg
                  </svg>
                </span>
              </span>
              <a
                class="Link-root-859"
                data-testid="worker-row-btn"
                href="/workers/detail/2"
                title="View Worker details"
              >
                John Doe
              </a>
            </div>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            -
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Ceiling, Plumbing
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              class="MuiChip-root makeStyles-statusChip-830 makeStyles-pending-837  MuiChip-colorPrimary"
            >
              <span
                class="MuiChip-label"
              >
                Pending
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root WithStyles(ForwardRef(TableRow))-root-858 makeStyles-pointer-769"
          data-testid="worker-list-row"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              class="makeStyles-userCenter-778"
            >
              <span
                class="MuiBadge-root makeStyles-avatarPosition-790 makeStyles-avatarWithSmallBadge-844"
              >
                <div
                  class="MuiAvatar-root MuiAvatar-circle makeStyles-avatarWrapper-842 makeStyles-avatarMedium-845 MuiAvatar-colorDefault"
                >
                  <svg
                    class="MuiSvgIcon-root"
                    focusable="false"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                    />
                    <title>
                      Active
                    </title>
                  </svg>
                </div>
                <span
                  class="MuiBadge-badge MuiBadge-anchorOriginBottomRightCircle"
                >
                  <svg>
                    accepted.svg
                  </svg>
                </span>
              </span>
              <a
                class="Link-root-859"
                data-testid="worker-row-btn"
                href="/workers/detail/11029ead-e3eb-48d5-a658-cd818a70719f"
                title="View Worker details"
              >
                John Doe
              </a>
            </div>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            -
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Ceiling, Plumbing
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              class="MuiChip-root makeStyles-statusChip-830 makeStyles-pending-837  MuiChip-colorPrimary"
            >
              <span
                class="MuiChip-label"
              >
                Pending
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
    <nav
      aria-label="pagination navigation"
      class="MuiPagination-root  makeStyles-pagination-860"
      data-testid="pagination"
    >
      <ul
        class="MuiPagination-ul"
      >
        <li>
          <button
            aria-label="Go to previous page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiPaginationItem-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
            </svg>
          </button>
        </li>
        <li>
          <button
            aria-current="true"
            aria-label="page 1"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-selected"
            tabindex="0"
            type="button"
          >
            1
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </li>
        <li>
          <button
            aria-label="Go to next page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiPaginationItem-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
          </button>
        </li>
      </ul>
    </nav>
    <div
      class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-861 makeStyles-close-872 closed"
      data-testid="worker-drawer-detail"
    >
      <div
        class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-862 MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
        style="visibility: hidden; webkit-transform: translateX(1024px) translateX(0px); transform: translateX(1024px) translateX(0px);"
      >
        <div
          class="makeStyles-drawerButtonWrapper-864"
        >
          <div
            class="makeStyles-drawerButton-865"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-text"
              data-testid="drawer-close-btn"
              style="outline: none;"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                <svg>
                  close.svg
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
          <div
            class="makeStyles-drawerHeader-863"
          >
            <p
              class="MuiTypography-root makeStyles-drawerTitle-866 MuiTypography-body1 MuiTypography-colorPrimary MuiTypography-alignLeft"
            >
              Worker Information
            </p>
          </div>
        </div>
        <div
          class="makeStyles-listDetail-891"
        >
          <div
            class="makeStyles-company-892"
          >
            <div
              class="makeStyles-drawerText-868"
            >
              <p
                class="MuiTypography-root makeStyles-listAccent-893 makeStyles-entityTitle-890 MuiTypography-body1"
              >
                 
              </p>
              <div
                class="makeStyles-drawerMainText-869"
              >
                <span>
                  -
                </span>
              </div>
            </div>
            <div
              class="makeStyles-drawerSection-867"
            >
              <div
                class="makeStyles-drawerColumnDirection-876"
              >
                <div
                  class="makeStyles-drawerRowDirection-877"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
                    />
                  </svg>
                  <div
                    class="makeStyles-drawerText-868 makeStyles-drawerTextSeparation-870"
                  >
                    <p
                      class="MuiTypography-root makeStyles-cardFont-903  MuiTypography-body1"
                    >
                      
                      <span
                        class=" "
                      >
                        -
                      </span>
                    </p>
                    <p
                      class="MuiTypography-root makeStyles-cardFont-903  MuiTypography-body1"
                    >
                      
                      
                      
                      
                    </p>
                    <p
                      class="MuiTypography-root makeStyles-cardFont-903  MuiTypography-body1"
                    >
                      -
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="makeStyles-drawerSection-867"
            >
              <div
                class="makeStyles-drawerColumnDirection-876"
              >
                <div
                  class="makeStyles-drawerRowDirection-877"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"
                    />
                  </svg>
                  <div
                    class="makeStyles-drawerText-868 makeStyles-drawerTextSeparation-870"
                  />
                </div>
              </div>
            </div>
            <div
              class="makeStyles-drawerSection-867"
            >
              <div
                class="makeStyles-drawerColumnDirection-876"
              >
                <div
                  class="makeStyles-drawerRowDirection-877"
                >
                  <svg
                    class="MuiSvgIcon-root"
                  >
                    emergency-contact.svg
                  </svg>
                  <div
                    class="makeStyles-drawerText-868 makeStyles-drawerTextSeparation-870"
                  />
                </div>
              </div>
            </div>
          </div>
          <hr
            class="MuiDivider-root makeStyles-drawerDivider-871"
          />
          <div
            class="makeStyles-ctaWrapper-894"
          >
            <span
              class=""
              data-testid="controlled-button"
              tabindex="-1"
            >
              <a
                aria-disabled="false"
                class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-drawerCTA-690 makeStyles-borderPrimaryButton-682 makeStyles-primaryButtonPadding-684"
                data-testid="drawerButton"
                href="/workers/detail/null"
                tabindex="0"
              >
                <span
                  class="MuiButton-label"
                >
                  Worker Detail
                </span>
              </a>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`WorkersTab should render empty 1`] = `
<div>
  <div>
    <div
      class="makeStyles-filterActionsContainer-39 makeStyles-filterActionsContainerPadding-41"
    >
      <div
        class="MuiBox-root MuiBox-root-68 makeStyles-filterStatusContainer-42 makeStyles-autocompleteFilterPosition-67"
      >
        <div
          class="makeStyles-floatingFilterWrapper-48 makeStyles-filterWrapper-47 makeStyles-buttonContainer-70 floatingFilterWrapper"
        >
          <span
            class="makeStyles-floatingFilterButton-49"
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              aria-controls="false"
              aria-haspopup="true"
              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-57"
              data-testid="button-filter-open"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                All Clients
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    class="makeStyles-dropdownIcon-51"
                  >
                    expand.svg
                  </svg>
                </span>
              </span>
            </button>
          </span>
        </div>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-createButton-3 makeStyles-primaryButtonLarge-5 MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge MuiButton-fullWidth"
        data-testid="open-worker-modal-btn"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Assign Worker
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      class=" makeStyles-container-74"
    >
      <div>
        <div
          class="MuiAvatar-root MuiAvatar-circle makeStyles-missingAvatarWrapper-85 makeStyles-missingAvatarBig-86 MuiAvatar-colorDefault"
        >
          <svg>
            workers.svg
          </svg>
        </div>
      </div>
      <p
        class="MuiTypography-root makeStyles-missingListText-75 MuiTypography-body1"
      >
        There are no Workers assigned
      </p>
    </div>
    <div
      class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-93 makeStyles-close-104 closed"
      data-testid="worker-drawer-detail"
    >
      <div
        class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-94 MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
        style="visibility: hidden; webkit-transform: translateX(1024px) translateX(0px); transform: translateX(1024px) translateX(0px);"
      >
        <div
          class="makeStyles-drawerButtonWrapper-96"
        >
          <div
            class="makeStyles-drawerButton-97"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-text"
              data-testid="drawer-close-btn"
              style="outline: none;"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                <svg>
                  close.svg
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
          <div
            class="makeStyles-drawerHeader-95"
          >
            <p
              class="MuiTypography-root makeStyles-drawerTitle-98 MuiTypography-body1 MuiTypography-colorPrimary MuiTypography-alignLeft"
            >
              Worker Information
            </p>
          </div>
        </div>
        <div
          class="makeStyles-listDetail-123"
        >
          <div
            class="makeStyles-company-124"
          >
            <div
              class="makeStyles-drawerText-100"
            >
              <p
                class="MuiTypography-root makeStyles-listAccent-125 makeStyles-entityTitle-122 MuiTypography-body1"
              >
                 
              </p>
              <div
                class="makeStyles-drawerMainText-101"
              >
                <span>
                  -
                </span>
              </div>
            </div>
            <div
              class="makeStyles-drawerSection-99"
            >
              <div
                class="makeStyles-drawerColumnDirection-108"
              >
                <div
                  class="makeStyles-drawerRowDirection-109"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
                    />
                  </svg>
                  <div
                    class="makeStyles-drawerText-100 makeStyles-drawerTextSeparation-102"
                  >
                    <p
                      class="MuiTypography-root makeStyles-cardFont-135  MuiTypography-body1"
                    >
                      
                      <span
                        class=" "
                      >
                        -
                      </span>
                    </p>
                    <p
                      class="MuiTypography-root makeStyles-cardFont-135  MuiTypography-body1"
                    >
                      
                      
                      
                      
                    </p>
                    <p
                      class="MuiTypography-root makeStyles-cardFont-135  MuiTypography-body1"
                    >
                      -
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="makeStyles-drawerSection-99"
            >
              <div
                class="makeStyles-drawerColumnDirection-108"
              >
                <div
                  class="makeStyles-drawerRowDirection-109"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"
                    />
                  </svg>
                  <div
                    class="makeStyles-drawerText-100 makeStyles-drawerTextSeparation-102"
                  />
                </div>
              </div>
            </div>
            <div
              class="makeStyles-drawerSection-99"
            >
              <div
                class="makeStyles-drawerColumnDirection-108"
              >
                <div
                  class="makeStyles-drawerRowDirection-109"
                >
                  <svg
                    class="MuiSvgIcon-root"
                  >
                    emergency-contact.svg
                  </svg>
                  <div
                    class="makeStyles-drawerText-100 makeStyles-drawerTextSeparation-102"
                  />
                </div>
              </div>
            </div>
          </div>
          <hr
            class="MuiDivider-root makeStyles-drawerDivider-103"
          />
          <div
            class="makeStyles-ctaWrapper-126"
          >
            <span
              class=""
              data-testid="controlled-button"
              tabindex="-1"
            >
              <a
                aria-disabled="false"
                class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-drawerCTA-10 makeStyles-borderPrimaryButton-2 makeStyles-primaryButtonPadding-4"
                data-testid="drawerButton"
                href="/workers/detail/null"
                tabindex="0"
              >
                <span
                  class="MuiButton-label"
                >
                  Worker Detail
                </span>
              </a>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`WorkersTab should render loading 1`] = `
<div>
  Loading...
</div>
`;

exports[`WorkersTab should render with company 1`] = `
<div>
  <div>
    <div
      class="makeStyles-filterActionsContainer-953 makeStyles-filterActionsContainerPadding-955"
    >
      <div
        class="MuiBox-root MuiBox-root-982 makeStyles-filterStatusContainer-956 makeStyles-autocompleteFilterPosition-981"
      >
        <div
          class="makeStyles-floatingFilterWrapper-962 makeStyles-filterWrapper-961 makeStyles-buttonContainer-984 floatingFilterWrapper"
        >
          <span
            class="makeStyles-floatingFilterButton-963"
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              aria-controls="false"
              aria-haspopup="true"
              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-971"
              data-testid="button-filter-open"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                All Clients
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    class="makeStyles-dropdownIcon-965"
                  >
                    expand.svg
                  </svg>
                </span>
              </span>
            </button>
          </span>
        </div>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-createButton-917 makeStyles-primaryButtonLarge-919 MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge MuiButton-fullWidth"
        data-testid="open-worker-modal-btn"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Assign Worker
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
    <table
      aria-label="project-workers-list"
      class="MuiTable-root"
    >
      <thead
        class="MuiTableHead-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Name
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Trades
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Status in Project
          </th>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root WithStyles(ForwardRef(TableRow))-root-1092 makeStyles-pointer-1003"
          data-testid="worker-list-row"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              class="makeStyles-userCenter-1012"
            >
              <span
                class="MuiBadge-root makeStyles-avatarPosition-1024 makeStyles-avatarWithSmallBadge-1078"
              >
                <div
                  class="MuiAvatar-root MuiAvatar-circle makeStyles-avatarWrapper-1076 makeStyles-avatarMedium-1079 MuiAvatar-colorDefault"
                >
                  <svg
                    class="MuiSvgIcon-root"
                    focusable="false"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                    />
                    <title>
                      Pending Invitation
                    </title>
                  </svg>
                </div>
                <span
                  class="MuiBadge-badge MuiBadge-anchorOriginBottomRightCircle"
                >
                  <svg>
                    migrated.svg
                  </svg>
                </span>
              </span>
              <a
                class="Link-root-1093"
                data-testid="worker-row-btn"
                href="/workers/detail/11029ead-e34c-48d5-a658-c1241d70719f"
                title="View Worker details"
              >
                Christian Ristango
              </a>
            </div>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Robert C. Martin
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Ceiling, Plumbing
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              class="MuiChip-root makeStyles-statusChip-1064 makeStyles-pending-1071  MuiChip-colorPrimary"
            >
              <span
                class="MuiChip-label"
              >
                Pending
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
    <nav
      aria-label="pagination navigation"
      class="MuiPagination-root  makeStyles-pagination-1094"
      data-testid="pagination"
    >
      <ul
        class="MuiPagination-ul"
      >
        <li>
          <button
            aria-label="Go to previous page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiPaginationItem-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
            </svg>
          </button>
        </li>
        <li>
          <button
            aria-current="true"
            aria-label="page 1"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-selected"
            tabindex="0"
            type="button"
          >
            1
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </li>
        <li>
          <button
            aria-label="Go to next page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiPaginationItem-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
          </button>
        </li>
      </ul>
    </nav>
    <div
      class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-1095 makeStyles-close-1106 closed"
      data-testid="worker-drawer-detail"
    >
      <div
        class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-1096 MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
        style="visibility: hidden; webkit-transform: translateX(1024px) translateX(0px); transform: translateX(1024px) translateX(0px);"
      >
        <div
          class="makeStyles-drawerButtonWrapper-1098"
        >
          <div
            class="makeStyles-drawerButton-1099"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-text"
              data-testid="drawer-close-btn"
              style="outline: none;"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                <svg>
                  close.svg
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
          <div
            class="makeStyles-drawerHeader-1097"
          >
            <p
              class="MuiTypography-root makeStyles-drawerTitle-1100 MuiTypography-body1 MuiTypography-colorPrimary MuiTypography-alignLeft"
            >
              Worker Information
            </p>
          </div>
        </div>
        <div
          class="makeStyles-listDetail-1125"
        >
          <div
            class="makeStyles-company-1126"
          >
            <div
              class="makeStyles-drawerText-1102"
            >
              <p
                class="MuiTypography-root makeStyles-listAccent-1127 makeStyles-entityTitle-1124 MuiTypography-body1"
              >
                 
              </p>
              <div
                class="makeStyles-drawerMainText-1103"
              >
                <span>
                  -
                </span>
              </div>
            </div>
            <div
              class="makeStyles-drawerSection-1101"
            >
              <div
                class="makeStyles-drawerColumnDirection-1110"
              >
                <div
                  class="makeStyles-drawerRowDirection-1111"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
                    />
                  </svg>
                  <div
                    class="makeStyles-drawerText-1102 makeStyles-drawerTextSeparation-1104"
                  >
                    <p
                      class="MuiTypography-root makeStyles-cardFont-1137  MuiTypography-body1"
                    >
                      
                      <span
                        class=" "
                      >
                        -
                      </span>
                    </p>
                    <p
                      class="MuiTypography-root makeStyles-cardFont-1137  MuiTypography-body1"
                    >
                      
                      
                      
                      
                    </p>
                    <p
                      class="MuiTypography-root makeStyles-cardFont-1137  MuiTypography-body1"
                    >
                      -
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="makeStyles-drawerSection-1101"
            >
              <div
                class="makeStyles-drawerColumnDirection-1110"
              >
                <div
                  class="makeStyles-drawerRowDirection-1111"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"
                    />
                  </svg>
                  <div
                    class="makeStyles-drawerText-1102 makeStyles-drawerTextSeparation-1104"
                  />
                </div>
              </div>
            </div>
            <div
              class="makeStyles-drawerSection-1101"
            >
              <div
                class="makeStyles-drawerColumnDirection-1110"
              >
                <div
                  class="makeStyles-drawerRowDirection-1111"
                >
                  <svg
                    class="MuiSvgIcon-root"
                  >
                    emergency-contact.svg
                  </svg>
                  <div
                    class="makeStyles-drawerText-1102 makeStyles-drawerTextSeparation-1104"
                  />
                </div>
              </div>
            </div>
          </div>
          <hr
            class="MuiDivider-root makeStyles-drawerDivider-1105"
          />
          <div
            class="makeStyles-ctaWrapper-1128"
          >
            <span
              class=""
              data-testid="controlled-button"
              tabindex="-1"
            >
              <a
                aria-disabled="false"
                class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-drawerCTA-924 makeStyles-borderPrimaryButton-916 makeStyles-primaryButtonPadding-918"
                data-testid="drawerButton"
                href="/workers/detail/null"
                tabindex="0"
              >
                <span
                  class="MuiButton-label"
                >
                  Worker Detail
                </span>
              </a>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
